# 2021

./: snakeAI.java
FlappyBird/: Background.cpp  Background.hpp  Bird.cpp  Bird.hpp  Init.h  Object.cpp  Scoreboard.cpp  Scoreboard.hpp  Window.cpp  Window.hpp  main.cpp
FlappyGirl/: BackgroundManager.cpp  BackgroundManager.hpp  Flapina.cpp  Flapina.hpp  Painting.cpp  Painting.h  Pixie.cpp  Pixie.hpp  audioManager.h  game.cpp  gameEngine.cpp  gameEngine.hpp  main.cpp  paintings.cpp  paintings.h  scoreboard.cpp  scoreboard.h  textureManager.cpp  textureManager.hpp
PunchOut/: CMakeLists.txt  main.cpp  readme
PunchOut/engine/include/: Event.h  GameEngine.h  GameMakerEngine.h  GameObject.h  Image.h  Mouse.h  Renderer.h  SDLLoader.h  Text.h  Texture.h  Timer.h  Window.h
PunchOut/engine/include/cnfg/: WindowCnfg.h
PunchOut/engine/include/managers/: DrawManager.h  ResourceManager.h
PunchOut/engine/include/sound/: Chunk.h
PunchOut/engine/include/utils/: Font.h  RendererEnums.h
PunchOut/engine/include/utils/shape/: Point.h
PunchOut/engine/lib/: Event.cpp  GameMakerEngine.cpp  GameObject.cpp  Image.cpp  Mouse.cpp  Renderer.cpp  SDLLoader.cpp  Text.cpp  Texture.cpp  Timer.cpp  Window.cpp
PunchOut/engine/lib/managers/: DrawManager.cpp  ResourceManager.cpp
PunchOut/game/include/: Game.h  Resources.h
PunchOut/game/include/boxers/: Boxer.h  glassJoe.h  lilMac.h
PunchOut/game/include/fight/: FightManager.h  Lifebar.h  PointSystem.h  Referee.h  Ring.h  Round.h
PunchOut/game/include/menu/: Button.h  Menu.h
PunchOut/game/include/timers/: PunchOutTimer.h  RefereeTimers.h  RoundTimers.h  glassJoeTimers.h  lilMacTimers.h
PunchOut/game/src/: Game.cpp  Input.cpp
PunchOut/game/src/boxers/: Boxer.cpp  glassJoe.cpp  lilMac.cpp
PunchOut/game/src/fight/: FightManager.cpp  Lifebar.cpp  PointSystem.cpp  Referee.cpp  Ring.cpp  Round.cpp
PunchOut/game/src/menu/: Button.cpp  Menu.cpp
PunchOut/game/src/timers/: PunchOutTimer.cpp  RefereeTimers.cpp  RoundTimers.cpp  glassJoeTimers.cpp  lilMacTimers.cpp
PunchOut/res/font/: license.txt  readme.txt
SnakeAI/: AI.c  AI.h  main.c  structures.h
Tic-Tac-toe/: AI.java  Main.java
